@@ -1,8 +1,8 @@
 #include "store.ih"
 
-void Store::calltree(size_t idx, size_t nestLevel) const
+void Store::calltree(size_t idx)
 {
-    XrefData const &ref = *d_xrefData[idx];
+    XrefData &ref = *d_xrefData[idx];
 
     if (
         not ref.complete() 
@@ -11,10 +11,27 @@ void Store::calltree(size_t idx, size_t nestLevel) const
     )
         return;
 
-    cout << setw(2 * nestLevel) << ' ' << ref.symbol() << '\n';
+    ++d_lineNr;
 
-    ++nestLevel;
+    if (d_dontRepeat and ref.lineNr() != 0 and ref.calls().size())
+    {
+        cout << setw(4) << d_lineNr << 
+                setw(2 * d_nestLevel) << ' ' << ref.symbol() << 
+                        " -> line " << ref.lineNr() << '\n';
+        return;
+    }
+
+    if (ref.lineNr() == 0)
+        ref.lineNr(d_lineNr);
+
+    cout << setw(4) << d_lineNr << setw(2 * d_nestLevel) << ' ' << 
+            ref.symbol() << '\n';
+
+    ++d_nestLevel;
 
     for (size_t idx: ref.calls())
-        calltree(idx, nestLevel);
+        calltree(idx);
+
+    --d_nestLevel;
 }
+
