@@ -2,5 +2,6 @@
 
 Store::Store()
 :
-    d_noData(Arg::instance().option(0, "no-data"))
+    d_noData(Arg::instance().option(0, "no-data")),
+    d_dontRepeat(Arg::instance().option(0, "dont-repeat"))
 {}
